# Trade-Project

./: .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  PLAN.md  main.py  pyproject.toml
backtest/: engine.py  metrics.py  report.py
config/: secrets.py  settings.yaml
dashboard/: TradeDashboard.slnx
dashboard/TradeDashboard/: App.xaml  App.xaml.cs  TradeDashboard.csproj
dashboard/TradeDashboard.Tests/: AppTestBase.cs  BacktestTests.cs  DashboardTests.cs  TabSwitchTests.cs  TradeDashboard.Tests.csproj  TradingTests.cs  UIConsistencyTests.cs
dashboard/TradeDashboard/Converters/: BoolToVisibilityConverter.cs  CollectionEmptyToVisibilityConverter.cs  DecimalToColorConverter.cs  DirectionToBrushConverter.cs  DirectionToTextConverter.cs  FavoriteButtonTextConverter.cs  StatusToTextConverter.cs
dashboard/TradeDashboard/Models/: AppConfiguration.cs  BacktestMetrics.cs  BacktestParameters.cs  BacktestResult.cs  DailyBar.cs  EquityPoint.cs  LiveBrokerModels.cs  LogEntry.cs  NewsItem.cs  PortfolioSummary.cs  SimAccount.cs  SimOrder.cs  SimPosition.cs  StockInfo.cs  StrategyParameterDefinition.cs  StrategyParameterRegistry.cs  Trade.cs
data/: generate_test_data.py  manager.py
monitor/: logger.py
news/: news_fetcher.py
risk/: manager.py  rules.py
strategy/: base.py  bollinger_breakout.py  factors.py  kdj_cross.py  ma_cross.py  macd_divergence.py  mean_reversion.py  momentum.py  rsi_extreme.py  td_sequential.py  wave_trend.py
tools/: ScreenshotRunner.cs  ui_screenshot.py  ui_visual_review.py
trader/: broker.py  simulator.py
(+48 files in other folders)
