[project]
name = "trade-project"
version = "0.1.0"
description = "个人股票量化交易系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "akshare>=1.15",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "matplotlib>=3.9",
    "efinance>=0.5.8",
    "tushare>=1.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "openai>=2.33.0",
    "pillow>=12.2.0",
    "uiautomation>=2.0.29",
]
